src/components/Navbar/Navbar.module.scss
@use "/src/styles/abstracts" as *;
@use "/src/styles/base/base" as base;
@use "sass:math";
@use "sass:color";

// FIXME: fix footer overlap (again)
.navWrapper {
	@extend base, .container !optional;
	background-color: $dark;
	width: 100%;
}

.burger { @include hide-sm-up; }

.content {
	justify-content: space-between;
	height: $nav-height;
}

.logo { height: math.div($nav-height, 2); }

.linkList {
	display: flex;
	a:hover { text-decoration: none; }
}

.link {
	@extend base, .light-hover-primary !optional;
	@include h4;

	display: flex;
	align-items: center;
	margin-left: 4rem;
	border-radius: 8px;

	@include sm-up { font-size: min(3vw, $h4-fs); }
}

// Media =====================================================================//
@include sm-down {
	.burger {
		position: fixed;
		right: $nav-padding;
		z-index: 3;
		margin-top: $nav-padding;
		background-color: $dark;
	}

	.nav {
		width: 100%;
		position: fixed;
		top: 0;
		right: 0;
		z-index: 2;

		background-color: $dark-darken;
		transition: transform 0.5s;
		transform: translateX(100%);
	}

	.content {
		@include size(100%, 100vh);
		flex-flow: column nowrap;
		justify-content: center;
		align-items: center;
		gap: 0;

		padding: $nav-padding;
		overflow-y: auto;
	}

	.linkList {
		flex-direction: column;
		align-items: center;
	}

	// TODO: Make touch area bigger
	.link {
		padding: 0.5rem 0;
		margin: 0;
	}

	// OPEN NAV ================================================================//
	.nav.open { transform: translate(0); }
}

